--- a/PaliGemma_Geometry.ipynb
+++ b/PaliGemma_Geometry.ipynb
@@ -2,13 +2,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "d232f1a2042943e4adf793ae59bd46d6",
+              "model_id": "e483ad0feac045179ab71e6a9ca6a8f1",
               "version_major": 2,
               "version_minor": 0
             },
@@ -31,11 +31,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
-        "from fetch_images import fetch_all_images_for\n",
+        "from fetch_images import download_images_by_category\n",
         "import data_constants as dc\n",
         "\n",
         "# Prepare dataset\n",
@@ -43,12 +43,12 @@
         "data: dict[str, list[str]] = dc.shorten_dict(dc.ANIMAL_DATA)\n",
         "\n",
         "categories = list(data.keys())\n",
-        "image_paths: dict[str, list[str]] = fetch_all_images_for(data, \"data/images\")"
+        "image_paths: dict[str, list[str]] = download_images_by_category(data, \"data/images\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -77,7 +77,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -94,7 +94,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -111,7 +111,7 @@
           "traceback": [
             "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-            "Cell \u001b[1;32mIn[5], line 6\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPlotting category clusters...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# --- Plot 1: Overall Category vs Sub-Category ---\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m plot_category_clusters(overall_category, categories[\u001b[38;5;241m0\u001b[39m], dirs, embeddings, model\u001b[38;5;241m.\u001b[39mg)\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m# # --- Plot 2: Sub-Category vs Sub-Category (1) ---\u001b[39;00m\n\u001b[0;32m      9\u001b[0m plot_category_clusters(categories[\u001b[38;5;241m0\u001b[39m], categories[\u001b[38;5;241m1\u001b[39m], dirs, embeddings, model\u001b[38;5;241m.\u001b[39mg)\n",
+            "Cell \u001b[1;32mIn[6], line 6\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPlotting category clusters...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# --- Plot 1: Overall Category vs Sub-Category ---\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m plot_category_clusters(overall_category, categories[\u001b[38;5;241m0\u001b[39m], dirs, embeddings, model\u001b[38;5;241m.\u001b[39mg)\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m# # --- Plot 2: Sub-Category vs Sub-Category (1) ---\u001b[39;00m\n\u001b[0;32m      9\u001b[0m plot_category_clusters(categories[\u001b[38;5;241m0\u001b[39m], categories[\u001b[38;5;241m1\u001b[39m], dirs, embeddings, model\u001b[38;5;241m.\u001b[39mg)\n",
             "File \u001b[1;32mc:\\Users\\zaman\\OneDrive\\Workspaces\\PaliGemma_Geometry\\plotting.py:41\u001b[0m, in \u001b[0;36mplot_category_clusters\u001b[1;34m(category1, category2, dirs, embeddings, normalize, orthogonal, alpha, s, target_alpha, target_s, fontsize)\u001b[0m\n\u001b[0;32m     38\u001b[0m dir1 \u001b[38;5;241m=\u001b[39m dirs[category1][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlda\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mto(torch\u001b[38;5;241m.\u001b[39mfloat32)\n\u001b[0;32m     39\u001b[0m dir2 \u001b[38;5;241m=\u001b[39m dirs[category2][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlda\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mto(torch\u001b[38;5;241m.\u001b[39mfloat32)\n\u001b[1;32m---> 41\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m normalize:\n\u001b[0;32m     42\u001b[0m     dir1 \u001b[38;5;241m=\u001b[39m dir1 \u001b[38;5;241m/\u001b[39m dir1\u001b[38;5;241m.\u001b[39mnorm()\n\u001b[0;32m     43\u001b[0m     dir2 \u001b[38;5;241m=\u001b[39m dir2 \u001b[38;5;241m/\u001b[39m dir2\u001b[38;5;241m.\u001b[39mnorm()\n",
             "\u001b[1;31mRuntimeError\u001b[0m: Boolean value of Tensor with more than one value is ambiguous"
           ]
